deps/v8/test/message/fail/class-fields-private-class-in-function.out
*%(basename)s:12: SyntaxError: Undefined private field #b: must be declared in an enclosing class
      getB() { return this.#b; }
                          ^
SyntaxError: Undefined private field #b: must be declared in an enclosing class
